sandbox/output
Anagrams.java:9: error: non-static method dropChar(String,int) cannot be referenced from a static context
                s.substring(0, 1) + Anagrams.of(dropChar(s, 0)).get(0),
                                                ^
Anagrams.java:10: error: non-static method dropChar(String,int) cannot be referenced from a static context
                s.substring(0, 1) + Anagrams.of(dropChar(s, 0)).get(1),
                                                ^
Anagrams.java:11: error: non-static method dropChar(String,int) cannot be referenced from a static context
                s.substring(1, 2) + Anagrams.of(dropChar(s, 1)).get(0),
                                                ^
Anagrams.java:12: error: non-static method dropChar(String,int) cannot be referenced from a static context
                s.substring(1, 2) + Anagrams.of(dropChar(s, 1)).get(1),
                                                ^
Anagrams.java:13: error: non-static method dropChar(String,int) cannot be referenced from a static context
                s.substring(2, 3) + Anagrams.of(dropChar(s, 2)).get(0),
                                                ^
Anagrams.java:14: error: non-static method dropChar(String,int) cannot be referenced from a static context
                s.substring(2, 3) + Anagrams.of(dropChar(s, 2)).get(1)
                                                ^
6 errors
